# ACE-Step-1.5

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-rocm.txt  requirements.txt  start_api_server.sh  start_api_server_rocm.bat  start_api_server_rocm.sh  start_gradio_ui.sh  start_gradio_ui_macos.sh  start_gradio_ui_macos_manual.sh  start_gradio_ui_manual.sh  start_gradio_ui_rocm.bat  start_gradio_ui_rocm.sh  start_gradio_ui_rocm_manual.bat  start_gradio_ui_rocm_manual.sh
acestep/: acestep_v15_pipeline.py  gpu_config.py  inference.py  inference_lm_offload_test.py  llm_backend_compat.py  llm_backend_compat_test.py  llm_inference.py  llm_inference_cache_cleanup_test.py  llm_inference_cfg_fixes_test.py  llm_inference_enforce_eager_test.py  llm_inference_offload_device_test.py  null_duration_fixes_test.py  pipeline_lm_selection.py  pipeline_lm_selection_test.py
acestep/api/: job_blocking_generation.py  job_generation_setup.py  job_generation_setup_test.py
acestep/customized_vllm/: __init__.py  pipeline.py  transformer.py
docs/en/: INSTALL.md  VST3_BACKEND_CONTRACT.md  VST3_MVP.md  studio.md
docs/ja/: INSTALL.md
plugins/acestep_vst3/: CMakeLists.txt  README.md
plugins/acestep_vst3/src/: PluginBackendClient.cpp  PluginBackendClient.h  PluginConfig.h  PluginEditor.cpp  PluginEditor.h  PluginEditorPreview.cpp  PluginEditorState.cpp  PluginEnums.cpp  PluginEnums.h  PluginMockGeneration.cpp  PluginMockGeneration.h  PluginPreview.cpp  PluginPreview.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h
scripts/: uv_sync_backend.sh
(+56 files in other folders)
